# sos

./: .gitignore  README.md  output.html  pyproject.toml  setup.cfg  tasks.py
sos/: __main__.py  constants.py  filesystem.py  helpers.py  html.py  main.py  output.html
sos/sos_utils/: selenium_webdriver.py
tests/: test_main.py
